added a pin point for current location

--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -1,4 +1,5 @@
 %h1 Listing locations
+%button.map Find a buddy!
 
 %table
   %tr
@@ -23,12 +24,13 @@
 %br
 
 = link_to 'New Location', new_location_path
-%div{:style => "width: 800px;"}
-  #map{:style => "width: 800px; height: 400px;"}
-:javascript
-  handler = Gmaps.build('Google');
-  handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-    markers = handler.addMarkers(#{raw @hash.to_json});
-    handler.bounds.extendWith(markers);
-    handler.fitMapToBounds();
-  });
+#map-canvas{style: "height: 500px; width: 500px; background-color: white"}
+/ %div{:style => "width: 800px;"}
+/   #map{:style => "width: 800px; height: 400px;"}
+/ :javascript
+/   handler = Gmaps.build('Google');
+/   handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+/     markers = handler.addMarkers(#{raw @hash.to_json});
+/     handler.bounds.extendWith(markers);
+/     handler.fitMapToBounds();
+/   });
