added pin point for address and current location

--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -1,6 +1,6 @@
 %h1 Listing locations
-%button.map Find a buddy!
-
+%button.map Use Current Location!
+%input{name: "address", placeholder: "Enter Address", type: "text", id: 'address'}
 %table
   %tr
     %th Latitude
