--- a/app/views/rides/_form.html.haml
+++ b/app/views/rides/_form.html.haml
@@ -13,11 +13,8 @@
     = f.label :distance
     = f.text_field :distance
   .field
-    = f.label :start_lat
-    = f.text_field :start_lat
-  .field
-    = f.label :start_lng
-    = f.text_field :start_lng
+    = f.label :address
+    = f.text_field :address
   .field
     = f.label :skill
     = f.text_field :skill
