--- a/app/views/rides/show.html.haml
+++ b/app/views/rides/show.html.haml
@@ -7,11 +7,14 @@
   %b Distance:
   = @ride.distance
 %p
-  %b Start lat:
-  = @ride.start_lat
+  %b longitude:
+  = @ride.longitude
 %p
-  %b Start lng:
-  = @ride.start_lng
+  %b Latitude lng:
+  = @ride.latitude
+%p
+  %b Address:
+  = @ride.address
 %p
   %b Skill:
   = @ride.skill
