--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -1,6 +1,9 @@
 %h1 Listing locations
 %button.map Use Current Location!
 %input{name: "address", placeholder: "Enter Address", type: "text", id: 'address'}
+%input{name: "distance", placeholder: "Distance", type: "integer" id: 'distance'}
+%input{name: "length", placeholder: "Length", type: "integer" id: 'length'}
+%input{name: "skill", placeholder: "skill", type: "text" id: 'skill'}
 %table
   %tr
     %th Latitude
