--- a/app/views/messages/show.html.haml
+++ b/app/views/messages/show.html.haml
@@ -2,10 +2,15 @@
 
 %p
   %b Sender:
-  = @message.sender_id
+  - @message.sender_id
+  =@sender_details.name
 %p
   %b Receiver:
-  = @message.receiver_id
+  - @message.receiver_id
+  =@receiver_details.name
+%p
+  %b Subject:
+  = @message.subject
 %p
   %b Content:
   = @message.content
