--- a/app/views/rides/index.html.haml
+++ b/app/views/rides/index.html.haml
@@ -39,6 +39,8 @@
       %td= ride.address
       %td= ride.skill
       %td= ride.status
+      %td
+        =render 'message_form'
       %td= link_to 'Show', ride
       %td= link_to 'Edit', edit_ride_path(ride)
       %td= link_to 'Destroy', ride, :method => :delete, :data => { :confirm => 'Are you sure?' }
