changed column name of distance to ride_distance to ensure that geocoder gem works

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,5 +13,8 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
- @import "scaffolds"
+ @import "scaffolds";
+ @import "home";
+ @import "sessions";
+ @import "footer"
  
