--- a/app/views/rides/_form.html.haml
+++ b/app/views/rides/_form.html.haml
@@ -12,7 +12,7 @@
     = f.text_field :title
   .field
     = f.label :distance
-    = f.text_field :distance
+    = f.text_field :ride_distance
   .field
     = f.label :address
     = f.text_field :address
