--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,7 @@
 !!!
 %html
   %head
+    %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}
     %title Buddy Up Cycle
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
@@ -12,24 +13,57 @@
     %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"}
 
   %body
-    - flash.each do |name, msg|
-      = content_tag :div, msg, class: "alert alert-#{name}" do
-        = msg
-    %ul
-      -if user_signed_in?
-        %li
-          -if current_user.image?
-            = image_tag current_user.image, class: "small-avatar"
-          -if current_user.name?
-            = current_user.name
-          -if current_user.email?
-            = current_user.email
-          -if current_user.username?
-            = current_user.username
-        %li= link_to "Edit profile", edit_user_registration_path
-        %li= link_to "Logout", destroy_user_session_path, method: :delete 
-      -else
-        %li=link_to "Login", new_user_session_path
-        %li= link_to "Sign Up", new_user_registration_path
+    .wrap
+      %nav.navbar.navbar-default{role: 'navigation'}
+        .container-fluid
+          - flash.each do |name, msg|
+            = content_tag :div, msg, class: "alert alert-#{name}" do
+              = msg
+          %nav.navbar-header
+            %a.navbar-brand
+              %img{alt: 'Buddy Up', src: ''}
+          -if user_signed_in?
+            %button.navbar-toggle.collapsed{:type=> 'button', 'data-toggle'=>'collapse', 'data-target'=>'#bs-example-navbar-collapse-1'}
+              %span.sr-only Toggle navigation 
+              %span.icon-bar
+              %span.icon-bar
+              %span.icon-bar
+          #bs-example-navbar-collapse-1.collapse.navbar-collapse
+            %ul.nav.navbar-nav
+              %li.dropdown
+                %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+                  -if user_signed_in?
+                    -if current_user.image?
+                      = image_tag current_user.image, class: "small-avatar"
+                    -if current_user.name?
+                      = current_user.name
+                    -if current_user.username?
+                      = current_user.username
+                      %span.caret
+                    %ul.dropdown-menu{:role => "menu"}
+                      %li=link_to "Edit Profile", edit_user_registration_path
+                      %li= link_to "Logout", destroy_user_session_path, method: :delete 
+              -if user_signed_in?
+                %li=link_to "Create Ride", new_ride_path
+                %li=link_to "Eat Cake", new_ride_path
+                %li=link_to "Find a Buddy", new_ride_path
+                %li.dropdown
+                  %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+                    Messages
+                    %span.caret
+                  %ul.dropdown-menu{:role => "menu"}
+                    %li=link_to "All", messages_path
+                
+                    %li.divider
+                    %li=link_to "Sent", messages_path
+                    %li=link_to "Received", messages_path
+       
+      = yield
+    #footer
+      .container
+        %p.text-muted.credit.text-center
+          Buddy Up Cycle courtesy
+          %a{:href => "http://lulumarshall.co.uk"} Lulu Marshall
+          
 
-    = yield
+   
