google maps able to return rides in the vicinity

--- a/app/views/rides/index.html.haml
+++ b/app/views/rides/index.html.haml
@@ -13,8 +13,8 @@
           %label{:for => "address"} 
           %input#addressInput.form-control{:placeholder => "Address of ride", :type => "adress"}
         .form-group
-          %label{:for => "distance"}
-          %input#distanceInput.form-control{:placeholder => "Distance from buddy", :type => "distance"}
+          %label{:for => "ride_distance"}
+          %input#distanceInput.form-control{:placeholder => "Distance from buddy", :type => "ride_distance"}
         .form-group
           %label{:for => "skill"} Skill
         .form-group 
