--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -39,14 +39,14 @@
                       = current_user.name
                     -if current_user.username?
                       = current_user.username
-                      %span.caret
-                    %ul.dropdown-menu{:role => "menu"}
-                      %li=link_to "Edit Profile", edit_user_registration_path
-                      %li= link_to "Logout", destroy_user_session_path, method: :delete 
+                    %span.caret
+                  %ul.dropdown-menu{:role => "menu"}
+                    %li=link_to "Edit Profile", edit_user_registration_path
+                    %li= link_to "Logout", destroy_user_session_path, method: :delete 
               -if user_signed_in?
                 %li=link_to "Create Ride", new_ride_path
                 %li=link_to "Eat Cake", new_ride_path
-                %li=link_to "Find a Buddy", new_ride_path
+                %li=link_to "Find a Buddy", rides_path
                 %li.dropdown
                   %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
                     Messages
