--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -52,11 +52,11 @@
                     Messages
                     %span.caret
                   %ul.dropdown-menu{:role => "menu"}
-                    %li=link_to "All", messages_path
+                    %li.all_messages=link_to "All", messages_path
                 
                     %li.divider
-                    %li=link_to "Sent", messages_path
-                    %li=link_to "Received", messages_path
+                    %li.sent_messages=link_to "Sent", messages_path
+                    %li.received_messages=link_to "Received", messages_path
        
       = yield
     #footer
