--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -49,14 +49,22 @@
                 %li=link_to "Find a Buddy", rides_path
                 %li.dropdown
                   %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+                    Find a route
+                    %span.caret
+                  %ul.dropdown-menu{:role => "menu"}
+                    %li=link_to "Strava Route", strava_path
+                    %li=link_to "Buddy up Routes", messages_path
+                %li=link_to "Need Help", rides_path
+                %li.dropdown
+                  %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
                     Messages
                     %span.caret
                   %ul.dropdown-menu{:role => "menu"}
-                    %li.all_messages=link_to "All", messages_path
+                    %li=link_to "All", messages_path
                 
                     %li.divider
-                    %li.sent_messages=link_to "Sent", messages_path
-                    %li.received_messages=link_to "Received", messages_path
+                    %li=link_to "Sent", messages_path
+                    %li=link_to "Received", messages_path
        
       = yield
     #footer
