removed the tables from showing when loading the page

--- a/app/views/messages/_messages.html.haml
+++ b/app/views/messages/_messages.html.haml
@@ -1,5 +1,5 @@
 #all_messages
-  %table.table.table-stripped.table-bordered
+  %table.table.table-stripped.table-bordered.slide-table
     %thead
       %tr
         %th Sender
