--- a/app/views/strava_routes/_strava_response.html.haml
+++ b/app/views/strava_routes/_strava_response.html.haml
@@ -1,5 +1,5 @@
 #strava_response
-  %table.table.table-stripped.table-bordered
+  %table.table.table-stripped.table-bordered.slide-table
     %thead
       %tr
         %th Ride Name
