--- a/app/views/rides/_ride_response.html.haml
+++ b/app/views/rides/_ride_response.html.haml
@@ -1,5 +1,5 @@
 #ride_response
-  %table.table.table-stripped.table-bordered
+  %table.table.table-stripped.table-bordered.slide-table
     %thead
       %tr
         %th Ride Name
