added message index code to the controller

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,5 +1,5 @@
 
-%h1 Listing messages
+%h1 Messages
 = link_to 'All', messages_path(:all => 'all'), id: 'all_message', class: 'btn all_messages'
 = link_to 'Sent', messages_path(:sent => 'sent'), id: 'sent_message', class: 'btn sent_messages'
 = link_to 'Received', messages_path(:received => 'received'), id: 'received_message', class: 'btn received_messages'
