--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -60,8 +60,7 @@
                     Messages
                     %span.caret
                   %ul.dropdown-menu{:role => "menu"}
-                    %li=link_to "All", messages_path
-                
+                    %li=link_to "All", controller: "messages", class:"all"
                     %li.divider
                     %li=link_to "Sent", messages_path
                     %li=link_to "Received", messages_path
