updated with css initial

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,9 +13,9 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
- @import "scaffolds";
  @import "home";
  @import "sessions";
  @import "footer";
- @import "rides"
+ @import "rides";
+ @import "menu"
  
