--- a/app/assets/stylesheets/rides.css.scss
+++ b/app/assets/stylesheets/rides.css.scss
@@ -1,7 +1,9 @@
-// Place all the styles related to the rides controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
 
 .slide-table{
   display: none;
+}
+#map-canvas{
+  height: 500px; 
+  width: 500px; 
+  background-color: white;
 }
