--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,11 +1,6 @@
 .container-fluid
   .row
-    .col-xs-3
-    .col-xs-6
+    .col-xs-12.sign-in
       .center-block
-        %button.btn.btn-default.sign_in{:type=>'button'}
-          =link_to 'Login', new_user_session_path 
-        %button.btn.btn-default.sign_in{:type=>'button'}
-          =link_to 'Sign up', new_user_registration_path 
-    .col-xs-3
-      
+        =link_to 'Login', new_user_session_path, :class => "btn btn-small btn-primary btn-block"
+        =link_to 'Sign up for BuddyUp', new_user_registration_path, :class => "btn btn-small btn-default btn-block sign-up"
