--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -18,4 +18,11 @@ body {
 #footer {
   height: 60px;
   background-color: #f5f5f5;
+  color: white;
+  padding-top: 2%;
+}
+
+p.credit.text-center.a{
+  text-decoration:none;
+  color: white;
 }
