--- a/app/views/rides/new.html.haml
+++ b/app/views/rides/new.html.haml
@@ -1,5 +1,9 @@
-%h1 New ride
+.container-fluid
+  .row.sessions-new
+    .col-s-2.col-md-4
+    .col-xs-12.col-s-8.col-md-4.log_in_box
+      %h1 New ride
 
-= render 'form'
+      = render 'form'
 
-= link_to 'Back', rides_path
+      = link_to 'Back', rides_path
