--- a/app/assets/stylesheets/rides.css.scss
+++ b/app/assets/stylesheets/rides.css.scss
@@ -2,8 +2,33 @@
 .slide-table{
   display: none;
 }
-#map-canvas{
-  height: 500px; 
-  width: 500px; 
-  background-color: white;
+
+
+@media screen and (max-width: 550px) {
+  #map-canvas{
+      margin: 0 auto;
+      height: 200px; 
+      width: 96%; 
+      background-color: #f5f5f5;
+      margin-left:2%;
+      margin-right:2%;
+      margin-top:2%;
+      margin-bottom:2%
+    }
 }
+
+
+
+@media (min-width: 550px) {
+  #map-canvas{
+    margin: 0 auto;
+    height: 500px; 
+    width: 50%; 
+    background-color: #f5f5f5;
+    margin-left:24%;
+    margin-top:2%;
+  }
+}
+
+
+
