--- a/app/views/rides/_form.html.haml
+++ b/app/views/rides/_form.html.haml
@@ -1,3 +1,4 @@
+
 = form_for @ride do |f|
   - if @ride.errors.any?
     #error_explanation
@@ -19,8 +20,8 @@
   .field
     = f.label :skill
     = f.text_field :skill
-  .field
-    = f.label :status
-    = f.text_field :status
+  / .field
+  /   = f.label :status
+  /   = f.text_field :status
   .actions
     = f.submit 'Save'
