--- a/app/views/strava_routes/search.html.haml
+++ b/app/views/strava_routes/search.html.haml
@@ -10,13 +10,13 @@
       %form{:role => "form"}
         .form-group
           %label{:for => "address"} 
-          %input#addressInput.form-control{:placeholder => "Address of ride", :type => "adress"}
+          %input#addressInput.form-control{:placeholder => "Address if not using current location", :type => "adress"}
         .form-group
           %label{:for => "ride_distance"}
           %input#distanceInput.form-control{:placeholder => "Distance from start of ride", :type => "ride_distance"}
-        %button.btn.btn-default.strava{:type => "submit"} Use current Location
-        %button.btn.btn-default.address{:type => "submit"} Use input address 
+        %button.btn.btn-primary.strava{:type => "submit"} Find a route
     .col-xs-1.col-md-3
-#map-canvas{style: "height: 500px; width: 500px; background-color: white"}
+    .col-xs-12.col-md-12
+      #map-canvas
 
 =render 'strava_response'
