--- a/app/views/messages/_messages.html.haml
+++ b/app/views/messages/_messages.html.haml
@@ -2,10 +2,9 @@
   %table.table.table-stripped.table-bordered.slide-table
     %thead
       %tr
-        %th Sender
-        %th Receiver
+        %th From
         %th Subject
 
     %tbody
 
-= link_to 'New Message', new_message_path
+  / = link_to 'New Message', new_message_path
