--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -1,5 +1,9 @@
-%h1 New message
+.container-fluid
+  .row.sessions-new
+    .col-s-2.col-md-4
+    .log_in_box
+      %h1 New message
 
-= render 'form'
+      = render 'form'
 
-= link_to 'Back', messages_path
+      = link_to 'Back', messages_path
