--- a/app/views/strava_routes/_strava_response.html.haml
+++ b/app/views/strava_routes/_strava_response.html.haml
@@ -1,12 +1,12 @@
-#strava_response
-  %table.table.table-stripped.table-bordered.slide-table
-    %thead
-      %tr
-        %th Ride Name
-        %th Start Latitude
-        %th Start Longitude
-        %th Average Grade
-        %th End Latitude
-        %th End Longitude
+/ #strava_response
+/   %table.table.table-stripped.table-bordered.slide-table
+/     %thead
+/       %tr
+/         %th Ride Name
+/         %th Start Latitude
+/         %th Start Longitude
+/         %th Average Grade
+/         %th End Latitude
+/         %th End Longitude
 
-    %tbody
+/     %tbody
