--- a/app/views/strava_routes/search.html.haml
+++ b/app/views/strava_routes/search.html.haml
@@ -1,7 +1,7 @@
 .container-fluid
   .row
     .col-xs-1.col-md-3
-    .col-xs-10.col-md-6
+    .col-xs-10.col-md-6.text-center
       %h1 Find Strava Routes
     .col-xs-1.col-md-3
   .row
