--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the Messages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#ride-input{
+  width:90%;
+  margin-bottom:2%;
+}
+.message-show{
+  width:250px;
+  margin: 0 auto;
+}
