--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
           - flash.each do |name, msg|
             = content_tag :div, msg, class: "alert alert-#{name}" do
               = msg
-          .navbar-header.tarmac-mobile
+          .navbar-header
             %h1.title-all.col-xs-12.text-center
               BuddyUp
               %br 
@@ -47,7 +47,7 @@
                     %li= link_to "Logout", destroy_user_session_path, method: :delete 
               -if user_signed_in?
                 %li=link_to "Create Ride", new_ride_path
-                %li=link_to "Eat Cake", new_ride_path
+                / %li=link_to "Eat Cake", new_ride_path
                 %li=link_to "Find a Buddy", rides_path
                 %li.dropdown
                   %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
@@ -56,7 +56,7 @@
                   %ul.dropdown-menu{:role => "menu"}
                     %li=link_to "Strava Route", strava_path
                     %li=link_to "Buddy up Routes", messages_path
-                %li=link_to "Need Help", rides_path
+                / %li=link_to "Need Help", rides_path
                 %li.dropdown
                   %a.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :href => "#", :role => "button"}
                     Messages
