--- a/app/views/rides/_ride_response.html.haml
+++ b/app/views/rides/_ride_response.html.haml
@@ -1,10 +1,10 @@
-#ride_response
-  %table.table.table-stripped.table-bordered.slide-table
-    %thead
-      %tr
-        %th Ride Name
-        %th Distance
-        %th Address
-        %th Owner
+/ #ride_response
+/   %table.table.table-stripped.table-bordered.slide-table
+/     %thead
+/       %tr
+/         %th Ride Name
+/         %th Distance
+/         %th Address
+/         %th Owner
 
-    %tbody
+/     %tbody
