--- a/app/views/rides/index.html.haml
+++ b/app/views/rides/index.html.haml
@@ -1,7 +1,7 @@
 .container-fluid
   .row
     .col-xs-1.col-md-3
-    .col-xs-10.col-md-6
+    .col-xs-10.col-md-6.text-center
       %h1 Find a Buddy
     .col-xs-1.col-md-3
   .row
@@ -10,7 +10,7 @@
       %form{:role => "form"}
         .form-group
           %label{:for => "address", :name => 'buddyform'} 
-          %input#addressInput.form-control{:placeholder => "Address if you don't want to use current location", :type => "address", :name => 'address'}
+          %input#addressInput.form-control{:placeholder => "Use current location or enter address", :type => "address", :name => 'address'}
         .form-group
           %label{:for => "ride_distance"}
           %input#distanceInput.form-control{:placeholder => "Distance from buddy", :type => "ride_distance"}
