--- a/app/views/messages/show.html.haml
+++ b/app/views/messages/show.html.haml
@@ -15,7 +15,7 @@
           %b Content:
           = @message.content
 
-        = link_to 'reply', new_message_path(:receiver=> @message.receiver_id) , :class=> 'btn btn-primary btn block'
+        = link_to 'reply', new_message_path(:receiver=> @message.sender_id) , :class=> 'btn btn-primary btn block'
         \|
         = link_to 'Edit', edit_message_path(@message)
         \|
