--- a/app/views/messages/show.html.haml
+++ b/app/views/messages/show.html.haml
@@ -14,11 +14,10 @@
         %p
           %b Content:
           = @message.content
-
-        = link_to 'reply', new_message_path(:receiver=> @message.sender_id) , :class=> 'btn btn-primary btn block'
-        \|
+        - if current_user == @message.sender_id
+          = link_to 'reply', new_message_path(:receiver=> @message.sender_id), :class=> 'btn btn-primary btn block'
         = link_to 'Edit', edit_message_path(@message)
         \|
-        = link_to 'Back', messages_path
+        = link_to 'Back to messages', messages_path
     .col-xs-4
      
