update to the reply button

--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -1,7 +1,6 @@
 .container-fluid
   .row.sessions-new
-    .col-s-2.col-md-4
-    .log_in_box
+    .log-in-bo
       %h1 New message
 
       = render 'form'
